--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                 width="270"
                 height="260"
               />
-              <h3 class="out-team-list-name">Николай Кучеренко</h3>
+              <h3 class="our-team-list-name">Николай Кучеренко</h3>
               <p class="our-team-list-position" lang="en">Product Designer</p>
               <ul class="our-team-social-links-list list">
                 <li class="our-team-social-links">
@@ -325,7 +325,7 @@
                 width="270"
                 height="260"
               />
-              <h3 class="out-team-list-name">Ольга Иванова</h3>
+              <h3 class="our-team-list-name">Ольга Иванова</h3>
               <p class="our-team-list-position" lang="en">Frontend Developer</p>
               <ul class="our-team-social-links-list list">
                 <li class="our-team-social-links">
@@ -386,7 +386,7 @@
                 width="270"
                 height="260"
               />
-              <h3 class="out-team-list-name">Андрей Шевченко</h3>
+              <h3 class="our-team-list-name">Андрей Шевченко</h3>
               <p class="our-team-list-position" lang="en">Marketing</p>
               <ul class="our-team-social-links-list list">
                 <li class="our-team-social-links">
@@ -447,7 +447,7 @@
                 width="270"
                 height="260"
               />
-              <h3 class="out-team-list-name">Иван Николаев</h3>
+              <h3 class="our-team-list-name">Иван Николаев</h3>
               <p class="our-team-list-position" lang="en">UI Designer</p>
               <ul class="our-team-social-links-list list">
                 <li class="our-team-social-links">
