--- a/index.html
+++ b/index.html
@@ -257,13 +257,40 @@
           <h3 class="section-header">Наша команда</h3>
           <ul class="our-team-list list">
             <li class="our-team-list-item">
-              <img
-                class="our-team-list-img"
-                src="./images/team/member1.jpg"
-                alt="фото сотрудника"
-                width="270"
-                height="260"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/team/member1-mobile.jpg    1x,
+                    ./images/team/member1-mobile@2x.jpg 2x
+                  "
+                  class="our-team-list-img"
+                  alt="фото сотрудника"
+                  media="(max-width:767px)"
+                />
+
+                <source
+                  srcset="
+                    ./images/team/member1-tablet.jpg    1x,
+                    ./images/team/member1-tablet@2x.jpg 2x
+                  "
+                  class="our-team-list-img"
+                  alt="фото сотрудника"
+                  media="(min-width:768px)"
+                />
+
+                <source
+                  srcset="
+                    ./images/team/member1-desktop.jpg    1x,
+                    ./images/team/member1-desktop@2x.jpg 2x
+                  "
+                  class="our-team-list-img"
+                  alt="фото сотрудника"
+                  media="(min-width:1200px)"
+                />
+
+                <img src="./images/team/member1.jpg" alt="фото сотрудника" />
+              </picture>
+
               <h3 class="our-team-list-name">Николай Кучеренко</h3>
               <p class="our-team-list-position" lang="en">Product Designer</p>
               <ul class="our-team-social-links-list list">
@@ -318,13 +345,39 @@
               </ul>
             </li>
             <li class="our-team-list-item">
-              <img
-                class="our-team-list-img"
-                src="./images/team/member2.jpg"
-                alt="фото сотрудника"
-                width="270"
-                height="260"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/team/member2-mobile.jpg    1x,
+                    ./images/team/member2-mobile@2x.jpg 2x
+                  "
+                  class="our-team-list-img"
+                  alt="фото сотрудника"
+                  media="(max-width:767px)"
+                />
+
+                <source
+                  srcset="
+                    ./images/team/member2-tablet.jpg    1x,
+                    ./images/team/member2-tablet@2x.jpg 2x
+                  "
+                  class="our-team-list-img"
+                  alt="фото сотрудника"
+                  media="(min-width:768px)"
+                />
+
+                <source
+                  srcset="
+                    ./images/team/member2-desktop.jpg    1x,
+                    ./images/team/member2-desktop@2x.jpg 2x
+                  "
+                  class="our-team-list-img"
+                  alt="фото сотрудника"
+                  media="(min-width:1200px)"
+                />
+
+                <img src="./images/team/member2.jpg" alt="фото сотрудника" />
+              </picture>
               <h3 class="our-team-list-name">Ольга Иванова</h3>
               <p class="our-team-list-position" lang="en">Frontend Developer</p>
               <ul class="our-team-social-links-list list">
@@ -379,13 +432,39 @@
               </ul>
             </li>
             <li class="our-team-list-item">
-              <img
-                class="our-team-list-img"
-                src="./images/team/member3.jpg"
-                alt="фото сотрудника"
-                width="270"
-                height="260"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/team/member3-mobile.jpg    1x,
+                    ./images/team/member3-mobile@2x.jpg 2x
+                  "
+                  class="our-team-list-img"
+                  alt="фото сотрудника"
+                  media="(max-width:767px)"
+                />
+
+                <source
+                  srcset="
+                    ./images/team/member3-tablet.jpg    1x,
+                    ./images/team/member3-tablet@2x.jpg 2x
+                  "
+                  class="our-team-list-img"
+                  alt="фото сотрудника"
+                  media="(min-width:768px)"
+                />
+
+                <source
+                  srcset="
+                    ./images/team/member3-desktop.jpg    1x,
+                    ./images/team/member3-desktop@2x.jpg 2x
+                  "
+                  class="our-team-list-img"
+                  alt="фото сотрудника"
+                  media="(min-width:1200px)"
+                />
+
+                <img src="./images/team/member3.jpg" alt="фото сотрудника" />
+              </picture>
               <h3 class="our-team-list-name">Андрей Шевченко</h3>
               <p class="our-team-list-position" lang="en">Marketing</p>
               <ul class="our-team-social-links-list list">
@@ -440,13 +519,39 @@
               </ul>
             </li>
             <li class="our-team-list-item">
-              <img
-                class="our-team-list-img"
-                src="./images/team/member4.jpg"
-                alt="фото сотрудника"
-                width="270"
-                height="260"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/team/member4-mobile.jpg    1x,
+                    ./images/team/member4-mobile@2x.jpg 2x
+                  "
+                  class="our-team-list-img"
+                  alt="фото сотрудника"
+                  media="(max-width:767px)"
+                />
+
+                <source
+                  srcset="
+                    ./images/team/member4-tablet.jpg    1x,
+                    ./images/team/member4-tablet@2x.jpg 2x
+                  "
+                  class="our-team-list-img"
+                  alt="фото сотрудника"
+                  media="(min-width:768px)"
+                />
+
+                <source
+                  srcset="
+                    ./images/team/member4-desktop.jpg    1x,
+                    ./images/team/member4-desktop@2x.jpg 2x
+                  "
+                  class="our-team-list-img"
+                  alt="фото сотрудника"
+                  media="(min-width:1200px)"
+                />
+
+                <img src="./images/team/member4.jpg" alt="фото сотрудника" />
+              </picture>
               <h3 class="our-team-list-name">Иван Николаев</h3>
               <p class="our-team-list-position" lang="en">UI Designer</p>
               <ul class="our-team-social-links-list list">
